# MultiQuestensions

./: .gitignore  LICENSE.md  MultiQuestensions.sln  README.md
.github/: FUNDING.yml
.github/workflows/: BuildModPR.yml  NDKBuild  ndk-build.yml
MultiQuestensions/: .gitignore  Android.mk  CMakeLists.txt  MultiQuestensions.vcxproj  MultiQuestensions.vcxproj.filters  bmbfmod.json  build.ps1  buildBMBF.ps1  buildQMOD.ps1  cpp.hint  log_timestamp  mod.json  mod.template.json  qpm.json
MultiQuestensions/include/: CS_DataStore.hpp  Config.hpp  GlobalFields.hpp  GlobalFieldsTemp.hpp  main.hpp
MultiQuestensions/include/Assets/: Sprites.hpp
MultiQuestensions/include/Beatmaps/: PreviewBeatmapPacket.hpp  PreviewBeatmapStub.hpp
MultiQuestensions/include/Environments/: LobbyAvatarNameTag.hpp  LobbyAvatarPlaceLighting.hpp  MQEAvatarNameTag.hpp  MQEAvatarPlaceLighting.hpp
MultiQuestensions/include/Extensions/: ExtendedPlayer.hpp
MultiQuestensions/include/Hooks/: EnvironmentAndAvatarHooks.hpp  Hooks.hpp  SessionManagerAndExtendedPlayerHooks.hpp
MultiQuestensions/include/Packets/: Callback.hpp  PacketManager.hpp  PacketSerializer.hpp
MultiQuestensions/include/UI/: CenterScreenLoading.hpp  DownloadedSongsGSM.hpp  HostLobbySetupPanel.hpp  LobbySetupPanel.hpp
MultiQuestensions/shared/CodegenExtensions/: ColorUtility.hpp  TempBloomFilterUtil.hpp
MultiQuestensions/shared/Players/: MpPlayerData.hpp  MpexPlayerData.hpp  MpexPlayerManager.hpp
MultiQuestensions/shared/Utils/: CustomData.hpp  SemVerChecker.hpp  event.hpp
MultiQuestensions/src/: CS_DataStore.cpp  beatmaps.cpp  beatmaps.hpp  main.cpp  packets.cpp  packets.hpp
MultiQuestensions/src/Assets/: Sprites.cpp
MultiQuestensions/src/Beatmaps/: PreviewBeatmapPacket.cpp  PreviewBeatmapPacket.hpp  PreviewBeatmapStub.cpp  PreviewBeatmapStub.hpp
MultiQuestensions/src/Environments/: LobbyAvatarNameTag.cpp  LobbyAvatarPlaceLighting.cpp  MQEAvatarPlaceLighting.cpp  MQEAvaterNameTag.cpp
MultiQuestensions/src/Extensions/: ExtendedPlayer.cpp
MultiQuestensions/src/Hooks/: EnvironmentAndAvatarHooks.cpp  EnvironmentHooks.cpp  InstallerHooks.cpp  MaxPlayerHooks.cpp  NetworkPlayerEntitlementChecker.cpp  NetworkPlayerEntitlementCheckerHooks.cpp  QuickplayHooks.cpp  SessionManagerAndExtendedPlayerHooks.cpp  SessionManagerAndMpexPlayerHooks.cpp
MultiQuestensions/src/Packets/: PacketManager.cpp  PacketManager.hpp  PacketSerializer.cpp  PacketSerializer.hpp
MultiQuestensions/src/Players/: MpPlayerData.cpp  MpexPlayerData.cpp
MultiQuestensions/src/UI/: CenterScreenLoading.cpp  DownloadedSongsGSM.cpp  HostLobbySetupPanel.cpp  LobbySetupPanel.cpp
MultiQuestensions/src/Utils/: CustomData.cpp
